Fix: change slideshow maxheight value to 650px
Fix is so that when browser becomes very wide the image does not overlap the text of the site.

--- a/hms.css
+++ b/hms.css
@@ -421,7 +421,7 @@ h1#page-title {
 	top: 0;
 	z-index: 1;
 	width: 100%;
-	max-height: inherit;
+	max-height: 650px;
 }
 .front .region-content-top h2.block-title {
 	text-transform: none;
